--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <body>
       <div class="banner">
         <div class="navbar">
-                <img src="logo.png" class="logo">
                 <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Bedroom</a></li>
@@ -18,12 +17,11 @@
         </div>
         <div class="content">
                 <h1>DESIGN YOUR HOUSE</h1>
-                <p>subscribe to my YouTube Channel to watch more 
-                        vidoes,<br>Press the bell icon o get more updates.</p>
+                <p>Newly House design for interior</p>
                         <div>
                                 
-                                <button type="button"><span></span>WATCH MORE</button>
-                                <button type="button"><span></span>SUBSCRIBE</button>
+                                <button type="button"><span></span>BUY NOW</button>
+                                <button type="button"><span></span>LEARN MORE</button>
                         </div>
         </div>
 
